@@ -46,7 +46,6 @@
         "marks": {
             "type": ["object", "null"],
             "description": "A mark captures the timing of a significant event during the lifetime of a transaction. Marks are organized into groups and can be set by the user or the agent.",
-            "regexProperties": true,
             "patternProperties": {
                 "^[^.*\"]*$": {
                     "$ref": "mark.json"
